wrap styles fix

--- a/media-styles.css
+++ b/media-styles.css
@@ -102,6 +102,7 @@ img {
   margin: 0 auto;
   padding: 0 !important;
   clear: both;
+  max-width: 100%;
 }
 
 #content h2 {
