--- a/sass-media/_utils.scss
+++ b/sass-media/_utils.scss
@@ -57,6 +57,7 @@
   margin: 0 auto;
   padding: 0 !important;
   clear: both;
+  max-width: 100%;
 }
 
 #content h2 {
